@@ -1,5 +1,15 @@
 2003-03-13  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* [w3m-dev 03819] support cd build && ../configure
+	* Makefile.in: add VPATH
+			add MV
+			use $(top_srcdir), $<, $@
+	* acinclude.m4 (AC_W3M_VERSION): use $srcdir
+	* configure.in (AC_W3M_VERSION): move
+	* mktable.c (main): basename
+
+2003-03-13  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* Makefile.in (distclean): added
 
 2003-03-13  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
